# FNAL-BatchQueues

./: .gitignore  README  pyproject.toml
data/: README
data/Test-Data/: README
doc/: fields.md
examples/: read_field.ipynb
new-folder/new-folder/: README.md
notebooks/: CodeAttemptFNAL.ipynb  CodeAttemptFNAL_SeqVer (1).ipynb  CodeAttemptFNAL_SeqVer (2).ipynb  CodeAttemptFNAL_SeqVer.ipynb  CodeAttemptFNAL_SeqVer.py  Perlmutter_anon.ipynb  README.md  anon_demo (1).ipynb
notebooks/Output/: README.md
notebooks/UnitTests/: conftest.py  pytest (1).ini  run_tests.py  test_load_dataframe.py  test_mapper.py  test_payloads (1).py  test_payloads.py  test_text_report.py  test_utilities (1).py  test_utilities.py  test_validators.py
notebooks/UnitTests/TestOutput/: README.txt
notebooks/tools/: READ_ME.md  anon_fnal_config.json.json
src/: __init__.py  fifebatch.py
src/Parsing-Scripts/: README
