[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fifebatch"
version = "0.1.0"
description = "Tools to explore the FIFEBatch Parquet dataset"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Justin Mueller", email = "mueller@fnal.gov" }]
license = {text = "MIT"}
dependencies = [
    "duckdb",
    "numpy",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]